@@ -1,0 +1,36 @@
+/*
+ * Copyright 2013 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *        http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package com.jayway.restassured.authentication
+
+import com.jayway.restassured.internal.http.HTTPBuilder
+
+/**
+ * Used for preemptive oauth2 header authentication
+ */
+class PreemptiveOAuth2HeaderScheme implements AuthenticationScheme {
+
+  def String accessToken
+
+  @Override
+  void authenticate(HTTPBuilder httpBuilder) {
+    httpBuilder.headers['Authorization'] = generateAuthToken()
+  }
+
+  public String generateAuthToken() {
+    "Bearer " + accessToken
+  }
+}
