@@ -26,8 +26,16 @@ public interface PreemptiveAuthSpec {
      *
      * @param username The username.
      * @param password The password.
-     *
      * @return The Request specification
      */
     RequestSpecification basic(String username, String password);
+
+    /**
+     * OAuth2 sign the request. Note that this currently does not wait for a WWW-Authenticate challenge before sending the the OAuth header.
+     * This assumes you've already generated an accessToken for the site you're targeting. The access token will be put in a header.
+     *
+     * @param accessToken The access token
+     * @return The request com.jayway.restassured.specification
+     */
+    RequestSpecification oauth2(String accessToken);
 }
