@@ -26,6 +26,7 @@ Change log next version
   RestAssured.config = RestAssured.config().jsonConfig(jsonConfig().numberReturnType(DOUBLE));
   (issue 571)
 * Upgraded optional Scribe dependency for OAuth2 authentication from version 1.3.5 to version 1.3.7.
+* Possible to sign the request with an oauth2 access token (in the header) without using Scribe (issue 509)
 
 Change log 2.4.1 (2015-04-12)
 ----------------------------
